Lexture task #L10.2. Added reg exp for Jesse Owens.

--- a/hw_10/Task #L10.2.ipynb
+++ b/hw_10/Task #L10.2.ipynb
@@ -16,11 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
    ]
   },
   {
@@ -32,11 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/linmachine/Documents/Python_EPAM/hw_10/Summer Olympic medallists 1896 to 2008 - ALL MEDALISTS.csv', skiprows=4) "
+    "df = pd.read_csv('./Summer Olympic medallists 1896 to 2008 - ALL MEDALISTS.csv', skiprows=4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = re.compile('\\w*\\d{2,4}m')"
    ]
   },
   {
@@ -48,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -124,19 +142,6 @@
        "      <td>M</td>\n",
        "      <td>Gold</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6523</th>\n",
-       "      <td>Berlin</td>\n",
-       "      <td>1936</td>\n",
-       "      <td>Athletics</td>\n",
-       "      <td>Athletics</td>\n",
-       "      <td>OWENS, Jesse</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>long jump</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Gold</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -146,22 +151,20 @@
        "6427  Berlin     1936  Athletics  Athletics  OWENS, Jesse  USA    Men   \n",
        "6439  Berlin     1936  Athletics  Athletics  OWENS, Jesse  USA    Men   \n",
        "6456  Berlin     1936  Athletics  Athletics  OWENS, Jesse  USA    Men   \n",
-       "6523  Berlin     1936  Athletics  Athletics  OWENS, Jesse  USA    Men   \n",
        "\n",
        "             Event Event_gender Medal  \n",
        "6427          100m            M  Gold  \n",
        "6439          200m            M  Gold  \n",
-       "6456  4x100m relay            M  Gold  \n",
-       "6523     long jump            M  Gold  "
+       "6456  4x100m relay            M  Gold  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df.Athlete == 'OWENS, Jesse')]"
+    "df[(df.Athlete == 'OWENS, Jesse') & (df.Event.apply(p.match))]"
    ]
   },
   {
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +361,7 @@
        "23702    Men  doubles            M  Gold  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +391,7 @@
        "Name: NOC, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +453,7 @@
        "GER   691"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +727,7 @@
        "27552                Beijing     2008            BOLT, Usain  JAM"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
